# appium_tuya

./: .gitignore  AGENTS.md  pyproject.toml
.agents/skills/code-callgraph/: SKILL.md
.agents/skills/code-callgraph/agents/: openai.yaml
.agents/skills/code-callgraph/scripts/: generate_callgraph.py
.agents/skills/testcase-to-yaml/: SKILL.md
.agents/skills/testcase-to-yaml/agents/: openai.yaml
.agents/skills/testcase-to-yaml/references/: examples.md  quality-gate.md  schema.md
appium_auto/: conftest.py
appium_auto/cases/: CASE01删除设备成功.txt  test_case00_device_details.py  test_case01_remove_device.py  test_case02_remove_and_repair_device.py
appium_auto/config/: .example.local.yaml  .example.wifi.local.yaml  default.yaml
appium_auto/core/: __init__.py  driver_factory.py  environment.py  run_context.py
appium_auto/flows/: __init__.py  device_lifecycle.py
appium_auto/pages/: __init__.py  add_device_page.py  base_page.py  device_panel_page.py  device_settings_page.py  home_page.py
appium_auto/specs/raw/: CASE00-进入设备详情页并查看设备信息.txt  CASE01删除设备成功.txt  CASE02删除设备后重新配网成功.txt
appium_auto/specs/yaml/: CASE00.yaml  CASE01.yaml  CASE02.yaml
doc/: README.md  code-callgraph.md  plan.md
doc/phase_01_poc/: plan.md
doc/phase_02_framework/: plan.md
doc/phase_03_batch_generation/: plan.md
tests/unit/: __init__.py  test_add_device_page.py  test_code_documentation.py  test_device_lifecycle.py  test_environment.py  test_home_page.py  test_run_context.py
