[project]
name = "appium-auto"
version = "0.1.0"
description = "AI 辅助 Appium 自动化脚本生产框架"
requires-python = ">=3.12"
dependencies = [
    "Appium-Python-Client>=5.0.0",
    "pytest>=8.0.0",
    "PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "appium_auto/cases"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"
markers = [
    "destructive: 会改变设备或账号状态、需要人工恢复的破坏性测试",
    "stateful: 成功后恢复状态、失败时可能需要人工处理的有状态测试",
    "case_id(id): 测试用例稳定标识，用于运行目录和日志",
]

